# datAFLow

./: CMakeLists.txt  README.md
afl-2.52b/: .gitignore  (+4 more)
fuzzalloc/: CMakeLists.txt  README.md
fuzzalloc/llvm/: CMakeLists.txt
fuzzalloc/llvm/Transforms/: ArrayAllocaPromotion.cpp  CMakeLists.txt
fuzzalloc/malloc/: CMakeLists.txt
fuzzalloc/scripts/: CMakeLists.txt  get_llvm_src.sh  prelink_binary.py  update_asan_src.sh  update_clang_src.sh  update_compiler_rt_src.sh
fuzzalloc/src/: CMakeLists.txt
fuzzalloc/src/clang-files/include/clang/Basic/: CodeGenOptions.def
fuzzalloc/src/clang-files/include/clang/Driver/: CC1Options.td
fuzzalloc/src/clang-files/include/clang/Frontend/: CodeGenOptions.def
fuzzalloc/src/clang-files/lib/CodeGen/: CGExprConstant.cpp
fuzzalloc/src/clang-files/lib/Frontend/: CompilerInvocation.cpp
fuzzalloc/src/compiler-rt-files/lib/asan/: CMakeLists.txt  asan_allocator.cc  asan_allocator.h  asan_malloc_linux.cc  asan_malloc_linux.cpp  asan_mapping.h
fuzzalloc/src/compiler-rt-files/lib/asan/tests/: CMakeLists.txt
fuzzalloc/src/compiler-rt-files/lib/fuzzer/: FuzzerDriver.cpp  FuzzerFlags.def  FuzzerLoop.cpp  FuzzerOptions.h  FuzzerTracePC.cpp  FuzzerTracePC.h
fuzzalloc/src/compiler-rt-files/lib/sanitizer_common/: sanitizer_allocator.h  sanitizer_coverage_libcdep_new.cc  sanitizer_fuzzalloc_allocator.h
fuzzalloc/src/compiler-rt-files/test/asan/: lit.cfg  lit.site.cfg.in
fuzzalloc/src/include/: fuzzalloc.h
fuzzalloc/src/include/llvm/Transforms/: InstrumentDereferences.h  TagDynamicAllocs.h
fuzzalloc/src/lib/: CMakeLists.txt  Common.cpp  Common.h  Utils.cpp  Utils.h
fuzzalloc/src/lib/Analysis/: CMakeLists.txt
fuzzalloc/src/lib/Analysis/CollectTagSites/: CollectTagSites.cpp
fuzzalloc/src/lib/Analysis/CollectTags/: CollectTags.cpp
fuzzalloc/src/lib/Analysis/SVFAnalysis/: CMakeLists.txt  SVFAnalysis.cpp
fuzzalloc/src/lib/Transforms/: CMakeLists.txt  Utils.cpp  Utils.h
fuzzalloc/src/lib/Transforms/CollectTags/: CMakeLists.txt  CollectTags.cpp
fuzzalloc/src/lib/Transforms/HeapifyObjects/: CMakeLists.txt  HeapifyCommon.cpp
fuzzalloc/src/lib/Transforms/HeapifyObjects/ExpandGVInitializers/: ExpandGVInitializers.cpp
fuzzalloc/src/lib/Transforms/HeapifyObjects/HeapifyAllocas/: HeapifyAllocas.cpp
fuzzalloc/src/lib/Transforms/HeapifyObjects/HeapifyGlobalVariables/: HeapifyGlobalVariables.cpp
fuzzalloc/src/lib/Transforms/InstrumentDerefs/: CMakeLists.txt  InstrumentDereferences.cpp
fuzzalloc/src/lib/Transforms/PromoteObjects/: CMakeLists.txt  PromoteCommon.cpp  PromoteCommon.h
fuzzalloc/src/lib/Transforms/PromoteObjects/ExpandGVInitializers/: ExpandGVInitializers.cpp
fuzzalloc/src/lib/Transforms/PromoteObjects/PromoteAllocas/: CMakeLists.txt  PromoteAllocas.cpp
fuzzalloc/src/lib/Transforms/PromoteObjects/PromoteGlobalVariables/: CMakeLists.txt  PromoteGlobalVariables.cpp
fuzzalloc/src/lib/Transforms/PromoteStack/: CMakeLists.txt  PromoteCommon.h  PromoteUtils.cpp  PromoteUtils.h
fuzzalloc/src/lib/Transforms/PromoteStack/PromoteArrays/: CMakeLists.txt  PromoteStaticArrays.cpp
fuzzalloc/src/lib/Transforms/PromoteStack/PromoteStructs/: CMakeLists.txt  PromoteStaticStructs.cpp
fuzzalloc/src/lib/Transforms/RewriteNews/: CMakeLists.txt  RewriteNews.cpp
fuzzalloc/src/lib/Transforms/TagDynamicAllocs/: CMakeLists.txt  TagDynamicAllocs.cpp  TagDynamicAllocsUtil.cpp  TagDynamicAllocsUtil.h
fuzzalloc/src/llvm/: CMakeLists.txt
fuzzalloc/src/llvm-files/lib/: CMakeLists.txt  Common.cpp  Common.h
fuzzalloc/src/llvm-files/lib/Analysis/: CMakeLists.txt
fuzzalloc/src/llvm-files/lib/Analysis/CollectStats/: CMakeLists.txt  CollectStats.cpp
fuzzalloc/src/llvm-files/lib/Analysis/CollectTagSites/: CMakeLists.txt  CollectTagSites.cpp
fuzzalloc/src/llvm-files/lib/Analysis/CountObjects/: CMakeLists.txt  CountObjects.cpp
fuzzalloc/src/llvm-files/lib/Analysis/SVFAnalysis/: CMakeLists.txt
fuzzalloc/src/llvm-files/lib/Transforms/HeapifyObjects/: CMakeLists.txt  HeapifyCommon.cpp  HeapifyCommon.h  HeapifyUtils.cpp  HeapifyUtils.h
fuzzalloc/src/llvm-files/lib/Transforms/InstrumentDerefs/: InstrumentDereferences.cpp
fuzzalloc/src/llvm-files/lib/Transforms/InstrumentMemAccesses/: CMakeLists.txt  InstrumentMemAccesses.cpp
fuzzalloc/src/llvm-files/lib/Transforms/Instrumentation/: AddressSanitizer.cpp  CMakeLists.txt
fuzzalloc/src/llvm-files/lib/Utils/: FuzzallocUtils.cpp  FuzzallocUtils.h
fuzzalloc/src/llvm/Transforms/: ArrayAllocaPromotion.cpp  CMakeLists.txt  FuzzAlloc.h  InstrumentDereferences.cpp  PromoteCommon.cpp  PromoteStaticArrays.cpp  PromoteStaticStructs.cpp  TagDynamicAlloc.cpp  TagDynamicAllocs.cpp  TagMalloc.cpp  Utils.cpp  Utils.h
fuzzalloc/src/llvm/Transforms/InstrumentDerefs/: CMakeLists.txt  InstrumentDereferences.cpp
fuzzalloc/src/llvm/Transforms/PromoteStack/: CMakeLists.txt  PromoteCommon.cpp  PromoteCommon.h
fuzzalloc/src/llvm/Transforms/TagDynamicAllocs/: CMakeLists.txt  TagDynamicAllocs.cpp
fuzzalloc/src/malloc/: CMakeLists.txt  deref.c  malloc.c  malloc_internal.h
fuzzalloc/src/runtime/: CMakeLists.txt
fuzzalloc/src/runtime/asan/: CMakeLists.txt  asan_allocator.cc  asan_allocator.h  asan_interceptors.cc  asan_malloc_linux.cc
fuzzalloc/src/runtime/malloc/: CMakeLists.txt  debug.c  debug.h  deref.c  malloc.c  malloc_internal.h  mem_access.c
fuzzalloc/src/runtime/ptmalloc3/: CMakeLists.txt
fuzzalloc/src/runtime/sanitizer_common/: sanitizer_allocator.h  sanitizer_fuzzalloc_allocator.h
fuzzalloc/src/runtime/test/asan/: CMakeLists.txt  lit.cfg
fuzzalloc/src/tools/: CMakeLists.txt  common.c  common.h  dataflow-clang-fast.c  dataflow-collect-stats.c  dataflow-collect-tag-sites.c  dataflow-collect-tags.c  dataflow-count-objects.c  dataflow-stats.c  dataflow-wpa.c
src/llvm-files/lib/Transforms/HeapifyObjects/: CMakeLists.txt  HeapifyGlobalVariables.cpp  HeapifyUtils.h
src/llvm-files/lib/Transforms/LowerMemIntrinsics/: CMakeLists.txt  LowerMemIntrinsics.cpp
src/llvm-files/lib/Utils/: CMakeLists.txt  LowerAtomics.cpp  LowerAtomics.h  LowerMemIntrinsics.cpp  LowerMemIntrinsics.h
(+252 files in other folders)
